--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>3! 2! 1! Chant </h1>
+<p>PUSH PUSH PUSH PUSH.</p>
 
 </body>
 </html>
